--- a/templates/contact.html
+++ b/templates/contact.html
@@ -79,7 +79,11 @@ We don't have such agreements with these conferences, but we'd like to down the 
     <p class="c3"><span class="italic">Q: How long will reviewers have to complete their review?
     </p>    
     <p class="c3"><span class="c0">A: We ask for reviews to be submitted within 2 weeks, followed by 2 weeks of discussion with the authors. Exceptions will be made for long papers (>12 pages). While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no more than 1 paper per reviewer).
+    </p>
+    <p class="c3"><span class="italic">Q: When submitting my review, the form isn't asking for a decision recommendation or a score. Is that normal?
     </p>    
+    <p class="c3"><span class="c0">A: Yes. Initially, we don't ask for a formal recommendation from you, so you can keep your mind open during the discussion period with the authors. However, two weeks after the 3rd review for a submission has been submitted, you will be asked to separately submit to the Action Editor an official recommendation for a decision on the submission.
+    </p>
     <p class="c3"><span class="italic">Q: What if I have seen the paper at a workshop, on arXiv, on Twitter, etc, and I know
             who the authors are?</span></p>
     <p class="c3"><span class="c0">A: You should not try to de-anonymize any submission by actively searching for it.
