--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -126,11 +126,14 @@
     <p class="c1">
       <span>Immediately after submitting your review, the </span>
       <span>crucial period of discussion with the authors starts</span>
-      <span class="c2">. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal as soon as you are willing to recommend acceptance. </span>
+      <span class="c2">. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal to them as soon as you are willing to recommend acceptance. </span>
     </p>
     <p class="c0">
       <span class="c2"/>
     </p>
+    <h2 class="c6" id="h.ragth3czmyw6">
+      <span class="c8">Official Recommendation</span>
+    </h2>
     <p class="c1">
       Once two weeks have passed since all reviews have been submitted, 
       reviewers will be able to submit their 
