--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -135,7 +135,7 @@
       <span class="c8">Official Recommendation</span>
     </h2>
     <p class="c1">
-      Once two weeks have passed since all reviews have been submitted, 
+        Once <b>two weeks have passed since all reviews have been submitted</b>, 
       reviewers will be able to submit their 
       official
        recommendations to the AE
