--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -97,13 +97,23 @@
             submit additional materials that can help to support their paper, such as a video presentation or
             code.</span></p>
     <p></p>
-    <p><span class="c1">Submissions may be withdrawn by the authors, either before or after a decision has
-            been made. Such submissions will remain on OpenReview but their status will be explicitly marked as
-            withdrawn. When withdrawing before a decision has been made, the authors are given the option to reveal
-            their identity. The Editors-in-Chief may also decide to withdraw a submission if it is found to contain
-            unethical research, any plagiarized content (including figures), or findings that are erroneous (due to
-            misconduct or honest error).</span></p>
+    <p><span class="c1">An author may decide to <b>withdraw</b> their submission before a decision has been entered, 
+        or they may decide to <b>retract</b> their submission after acceptance. In the former case, authors may trigger 
+        the withdrawal themselves, through OpenReview. The author will need to enter a reason for the withdrawal, 
+        and the submission will remain on OpenReview but its status will be explicitly marked as withdrawn. The authors 
+        will be given the option to reveal their identity, otherwise the submission will remain public but anonymous.
+</span></p>
     <p></p>
+
+    <p>If an author decides to retract their paper after it is accepted, they will need to enter a retraction statement 
+        in OpenReview. The retraction statement will be reviewed by the Editors-in-Chief and all authors will be contacted. 
+        Once the retraction is confirmed, the paper will remain on OpenReview but its status will be marked as retracted.</p>
+    <p></p>
+
+    <p>The Editors-in-Chief may also decide to withdraw a submission or retract an accepted paper if it is found to contain 
+        unethical research, any plagiarized content (including figures), or findings that are erroneous (due to misconduct or honest error).</p>
+    <p></p>
+
     <p>Our <a href="ethics.html">Ethics Guidelines</a> describe TMLR&rsquo;s ethical principles and establish common
             ground for editors, reviewers, and authors to evaluate the potential for harm of a proposed work.
             Submissions which describe work with the potential for harm should clearly describe the risks and
