--- a/templates/contact.html
+++ b/templates/contact.html
@@ -104,4 +104,9 @@ We don't have such agreements with these conferences, but we'd like to down the 
     <p class="c3"><span class="c0">A: Consider whether the submission would be acceptable if the authors added or
             improved a broader impact statement, and if so, this can be required for the camera-ready version. If the
             submission carries significant risk of harm, contact the Editors-in-Chief.</span></p>
+    <p class="c3"><span class="italic">Q: Three reviewers have now submitted their official recommendations. I want to submit my decision, but I don't 
+        seem able to do it on OpenReview. What should I do?</span></p>
+    <p class="c3"><span class="c0">A: Before you can submit your decision, you must rate the quality of the reviews submitted by the reviewers, on OpenReview. 
+        Once you have submitted these ratings, the submission of your decision will be enabled on OpenReview.</span></p>
+
 {% endblock %}
