--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   <link rel="icon" type="image/png" href="/img/favicon-16x16.png">
   <link rel="icon" type="image/png" href="/img/favicon-32x32.png">
 
-<title>{% block title %}Journal of Machine Learning Research{% endblock %}</title>
+<title>{% block title %}Transactions on Machine Learning Research{% endblock %}</title>
 
 
 <link rel="alternate" type="application/rss+xml" href="/jmlr.xml" title="JMLR RSS">
