--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 
+{% block extraheader %}
+<style>
+div, iframe {
+    margin: 0 auto;
+    display: block;
+    border-style:none;
+}
+
+</style>
+
 {% block content %}
 
 
