--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,6 +99,14 @@ We don't have such agreements with these conferences, but we'd like to down the 
 
     <p class="c3 c5"><span class="c0"></span></p>
     <h2 class="c4" id="h.82ajlcn8xqwm"><span class="c2">Action Editors</span></h2>
+    <p class="c3"><span class="italic">Q: Can I invite someone to join TMLR's pool of reviewers?</span></p>
+    <p class="c3"><span class="c0">A: Yes, this can be done through the AE Console on OpenReview, by clicking on link "Recruit Reviewer" 
+        and then on button "Reviewer Recruitment by AE".</span></p>
+    <p class="c3"><span class="italic">Q: Can I invite someone to review a specific submission I'm in charge of, 
+        without them joining TMLR's general pool of reviewers?</span></p>
+    <p class="c3"><span class="c0">A: Yes, simply ask them to visit the submission's OpenReview page, where they can request to 
+        review the submission by clicking on button "Solicit Review". You'll then receive a notification asking you to accept 
+        their request. Once you do, they will become an official reviewer for that submission.</span></p>
     <p class="c3"><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
             ethical guidelines; how should I handle this?</span></p>
     <p class="c3"><span class="c0">A: Consider whether the submission would be acceptable if the authors added or
