--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -48,7 +48,7 @@ $(document).ready(function(){
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation }}.</li>{% endfor %}
+      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation }}. <br><span class="research">{{e.expertise}}</span> </li>{% endfor %}
     </ul> -->
     
     <h3>Managing Editors</h3>
@@ -56,10 +56,11 @@ $(document).ready(function(){
       <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google.</li>
     </ul>
 
-    <!-- <h3>JMLR Action Editors</h3>
+    <h3>JMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
         <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>{% endfor %}
-      </ul> -->
+      </ul>
+      <br><br>
     
  
 {% endblock %}
