--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131826476-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F15C32CP9G"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-    gtag('config', 'UA-131826476-1');
+      gtag('config', 'G-F15C32CP9G');
     </script>
 
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
