--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -5,7 +5,7 @@
 
 <p style="text-align:center;"><b>We are not yet accepting submissions to TMLR!</b>
 </p>
-<p style="text-align:center;"><b>We expect to be up and running by early March; stay tuned for updates. The guidance below will apply once we start receiving submissions.</b>
+<p style="text-align:center;"><b>We expect to be up and running by end of March; stay tuned for updates. The guidance below will apply once we start receiving submissions.</b>
 </p>
 
 <p>
