--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,8 @@
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
             Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
-    <h1 class="c9" id="h.skb23zlpouea"><span>Frequently Asked Questions</span></h1>
+
+    <h1 id="faq"><span>Frequently Asked Questions</span></h1>
     <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
     <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
     </p>    
