--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -28,20 +28,20 @@ h2 {
 <p class="c0"><span>As Editors-in-Chief, Hugo, Kyunghyun, and myself are delighted to announce that the Transactions on
         Machine Learning Research (TMLR) is now accepting submissions! Some of you have expressed your eagerness to send
         us your manuscripts during the last 3 months since TMLR was </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080667919&amp;usg=AOvVaw2UacUZWM44_tM_LJ1gi448">announced
+            href="https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080667919&amp;usg=AOvVaw2UacUZWM44_tM_LJ1gi448">announced
             last </a></span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080668032&amp;usg=AOvVaw33thtR_hHTShR_oQsu7Dz8">NeurIPS</a></span><span>,
+            href="https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080668032&amp;usg=AOvVaw33thtR_hHTShR_oQsu7Dz8">NeurIPS</a></span><span>,
         and the reward for your patience is that we are now fully prepared: the TMLR </span><span class="c3"><a
             class="c2"
-            href="https://www.google.com/url?q=http://jmlr.org/tmlr&amp;sa=D&amp;source=editors&amp;ust=1648047080668133&amp;usg=AOvVaw1qzJZRNnS6m-szitl8V_wp">website</a></span><span>&nbsp;has
+            href="http://jmlr.org/tmlr&amp;sa=D&amp;source=editors&amp;ust=1648047080668133&amp;usg=AOvVaw1qzJZRNnS6m-szitl8V_wp">website</a></span><span>&nbsp;has
     </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://jmlr.org/tmlr/editorial-policies.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668257&amp;usg=AOvVaw3tnEReKMKlqVsHLYcnyS_g">submission
+            href="https://jmlr.org/tmlr/editorial-policies.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668257&amp;usg=AOvVaw3tnEReKMKlqVsHLYcnyS_g">submission
             guidelines</a></span><span>&nbsp;and </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://jmlr.org/tmlr/submissions.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668395&amp;usg=AOvVaw09dRfEAF3_6AbKXOFJO_uZ">updated
+            href="https://jmlr.org/tmlr/submissions.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668395&amp;usg=AOvVaw09dRfEAF3_6AbKXOFJO_uZ">updated
             LaTeX templates</a></span><span>, the </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=http://openreview.net/group/edit?id%3DTMLR&amp;sa=D&amp;source=editors&amp;ust=1648047080668513&amp;usg=AOvVaw324pXgCAAd_JBWnaNa5iPC">OpenReview
+            href="http://openreview.net/group/edit?id%3DTMLR&amp;sa=D&amp;source=editors&amp;ust=1648047080668513&amp;usg=AOvVaw324pXgCAAd_JBWnaNa5iPC">OpenReview
             site</a></span><span>&nbsp;is tested and ready, and an expert slate of </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://jmlr.org/tmlr/editorial-board.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668609&amp;usg=AOvVaw3Ppsr7p-KTQ75JRTFjPpvy">Action
+            href="https://jmlr.org/tmlr/editorial-board.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668609&amp;usg=AOvVaw3Ppsr7p-KTQ75JRTFjPpvy">Action
             Editors</a></span><span class="c1">&nbsp;and reviewers have been recruited. It&rsquo;s exciting to see TMLR
         becoming a reality, and we are grateful for all our supporters: the volunteers that have helped give feedback
         and debug the review process; all of you that have agreed to be AEs or reviewers; our advisors and sponsors; and
@@ -52,19 +52,19 @@ h2 {
         proceedings, so we suggest that you keep up to date on new submissions, new accepted papers, and new
         certifications by signing up for our </span><span>mailing list digest</span><span>&nbsp;(either </span><span
         class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://groups.google.com/g/tmlr-announce-daily&amp;sa=D&amp;source=editors&amp;ust=1648047080668959&amp;usg=AOvVaw3uRTpqi7UvmwANEtUjf-Pf">daily</a></span><span>&nbsp;or
+            href="https://groups.google.com/g/tmlr-announce-daily&amp;sa=D&amp;source=editors&amp;ust=1648047080668959&amp;usg=AOvVaw3uRTpqi7UvmwANEtUjf-Pf">daily</a></span><span>&nbsp;or
     </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://groups.google.com/g/tmlr-announce-weekly&amp;sa=D&amp;source=editors&amp;ust=1648047080669076&amp;usg=AOvVaw2GX6marcrGhXSiuyGsocLF">weekly</a></span><span>)
+            href="https://groups.google.com/g/tmlr-announce-weekly&amp;sa=D&amp;source=editors&amp;ust=1648047080669076&amp;usg=AOvVaw2GX6marcrGhXSiuyGsocLF">weekly</a></span><span>)
         or following our </span><span>twitter feeds</span><span>&nbsp;for </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://twitter.com/TmlrSub&amp;sa=D&amp;source=editors&amp;ust=1648047080669221&amp;usg=AOvVaw2Xp5jRRkOyLbjoeMeISY7Y">new
+            href="https://twitter.com/TmlrSub&amp;sa=D&amp;source=editors&amp;ust=1648047080669221&amp;usg=AOvVaw2Xp5jRRkOyLbjoeMeISY7Y">new
             submissions</a></span><span>, </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://twitter.com/TmlrPub&amp;sa=D&amp;source=editors&amp;ust=1648047080669301&amp;usg=AOvVaw1lPZqHo2W0PjfkUhSXtqwR">accepted
+            href="https://twitter.com/TmlrPub&amp;sa=D&amp;source=editors&amp;ust=1648047080669301&amp;usg=AOvVaw1lPZqHo2W0PjfkUhSXtqwR">accepted
             papers</a></span><span>&nbsp;and </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://twitter.com/TmlrCert&amp;sa=D&amp;source=editors&amp;ust=1648047080669376&amp;usg=AOvVaw0td-uCFz5CkEa01T9kTlNr">certified
+            href="https://twitter.com/TmlrCert&amp;sa=D&amp;source=editors&amp;ust=1648047080669376&amp;usg=AOvVaw0td-uCFz5CkEa01T9kTlNr">certified
             papers</a></span><span>. If you were not invited to be a reviewer, or were invited but couldn&rsquo;t accept
         because of other commitments, please keep an eye out for new submissions that are in your area of expertise -
         you are welcome to contribute and </span><span class="c3"><a class="c2"
-            href="https://www.google.com/url?q=https://jmlr.org/tmlr/contact.html%23solicit&amp;sa=D&amp;source=editors&amp;ust=1648047080669488&amp;usg=AOvVaw32D0QC2kavayc_lzi_j0cf">solicit
+            href="https://jmlr.org/tmlr/contact.html%23solicit&amp;sa=D&amp;source=editors&amp;ust=1648047080669488&amp;usg=AOvVaw32D0QC2kavayc_lzi_j0cf">solicit
             to review a submission</a></span><span class="c1">, subject to approval by the action editor.</span></p>
 <p class="c0 c4"><span class="c1"></span></p>
 <p class="c0"><span>Looking forward, we hope for a smooth and successful launch of the review process, but of course we
