prettify blog post

--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -24,6 +24,14 @@ h2 {
 {% block content %}
 
 <h1 class="c5" id="h.wnaqpax5wvcc"><span class="c8">TMLR is now accepting submissions</span></h1>
+
+<blockquote><i>Raia Hadsell, Kyunghyun Cho, Hugo Larochelle
+    </i>
+    <br><br>
+    <i>24 March 2022</i>
+    <br>
+</blockquote>
+
 <p class="c0 c4"><span class="c1"></span></p>
 <p class="c0"><span>As Editors-in-Chief, Hugo, Kyunghyun, and myself are delighted to announce that the Transactions on
         Machine Learning Research (TMLR) is now accepting submissions! Some of you have expressed your eagerness to send
