--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -18,6 +18,10 @@ h2 {
     width: 60%;
     margin: auto;
 }
+
+.c6 {
+    font-weight: bold
+}
 </style>
 {% endblock %}
 
@@ -25,7 +29,7 @@ h2 {
 
 <h1 class="c5" id="h.wnaqpax5wvcc"><span class="c8">TMLR is now accepting submissions</span></h1>
 
-<blockquote><i>Raia Hadsell, Kyunghyun Cho, Hugo Larochelle
+<blockquote><i><a href="https://raiahadsell.com/index.html">Raia Hadsell</a>, <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a>, <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>
     </i>
     <br><br>
     <i>24 March 2022</i>
@@ -101,25 +105,27 @@ h2 {
 <p class="c0"><span>In the future, we hope to use TMLR certifications for reviewing or publishing special topics or
         collections, for instance through aligning with a workshop or small conference. The certification would be
         edited and awarded by a guest editor or committee. If you are </span><span>interested in
-        working</span><span>&nbsp;with TMLR on developing a certification, please </span><span>reach out to
-        us</span><span class="c1">. </span></p>
-<p class="c0 c4"><span class="c1"></span></p>
-<p class="c0"><span>Another development we are considering for the future is to support non-PDF, interactive
+        working</span><span>&nbsp;with TMLR on developing a certification, please </span><span class="c1"><a class="c3"
+            href="mailto:tmlr-editors@jmlr.org">reach out to us</a></span><span class="c0">. </span></p>
+<p class="c2"><span class="c0"></span></p>
+<p><span>Another development we are considering for the future is to support non-PDF, interactive
         submissions. Since TMLR has no paper proceedings, is entirely online and isn&rsquo;t bound to paper, we see this
         as an opportunity to innovate on the format of scientific publications. Our first step is to set up an internal
         committee tasked with exploring our options and making recommendations adapted to TMLR. Stay tuned for more on
         this!</span></p>
-<p class="c0 c4"><span class="c1"></span></p>
-<p class="c0"><span>Of course, there may be other rocky areas to navigate in the first few months! We apologize in
+<p class="c2"><span class="c0"></span></p>
+<p><span>Of course, there may be other rocky areas to navigate in the first few months! We apologize in
         advance for any issues that come up; do remember that this is a new effort, and be kind to us. Please check the
-    </span><span>FAQ</span><span>&nbsp;regularly whether you are an author, a reviewer, or an Action Editor, and
-    </span><span>contact us</span><span class="c1">&nbsp;if you encounter any issues or have feedback on the journal.
-    </span></p>
-<p class="c0 c4"><span class="c1"></span></p>
-<p class="c0"><span class="c1">Raia Hadsell, with</span></p>
-<p class="c0"><span class="c1">Kyunghyun Cho</span></p>
-<p class="c0"><span class="c1">Hugo Larochelle</span></p>
-<p class="c0 c4"><span class="c1"></span></p>
-<p class="c0 c4"><span class="c1"></span></p>
+    </span><span class="c1"><a class="c3"
+            href="https://jmlr.org/tmlr/contact.html%23faq&amp;sa=D&amp;source=editors&amp;ust=1648048229718144&amp;usg=AOvVaw2EEr92LHGvuKDH3gcFDbJu">FAQ</a></span><span>&nbsp;regularly
+        whether you are an author, a reviewer, or an Action Editor, and </span><span class="c1"><a class="c3"
+            href="https://jmlr.org/tmlr/contact.html&amp;sa=D&amp;source=editors&amp;ust=1648048229718278&amp;usg=AOvVaw0sVCJnu2qEPzQRuOVZIjbI">contact
+            us</a></span><span class="c0">&nbsp;if you encounter any issues or have feedback on the journal. </span></p>
+<p class="c2"><span class="c0"></span></p>
+<p><span class="c0">Raia Hadsell, with</span></p>
+<p><span class="c0">Kyunghyun Cho</span></p>
+<p><span class="c0">Hugo Larochelle</span></p>
+<p class="c2"><span class="c0"></span></p>
+<p class="c2"><span class="c0"></span></p>
 
 {% endblock %}
