--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -40,20 +40,20 @@ h2 {
 <p class="c0"><span>As Editors-in-Chief, Hugo, Kyunghyun, and myself are delighted to announce that the Transactions on
         Machine Learning Research (TMLR) is now accepting submissions! Some of you have expressed your eagerness to send
         us your manuscripts during the last 3 months since TMLR was </span><span class="c3"><a class="c2"
-            href="https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080667919&amp;usg=AOvVaw2UacUZWM44_tM_LJ1gi448">announced
+            href="https://youtu.be/Uc1r1LfJtds">announced
             last </a></span><span class="c3"><a class="c2"
-            href="https://youtu.be/Uc1r1LfJtds&amp;sa=D&amp;source=editors&amp;ust=1648047080668032&amp;usg=AOvVaw33thtR_hHTShR_oQsu7Dz8">NeurIPS</a></span><span>,
+            href="https://youtu.be/Uc1r1LfJtds">NeurIPS</a></span><span>,
         and the reward for your patience is that we are now fully prepared: the TMLR </span><span class="c3"><a
             class="c2"
-            href="http://jmlr.org/tmlr&amp;sa=D&amp;source=editors&amp;ust=1648047080668133&amp;usg=AOvVaw1qzJZRNnS6m-szitl8V_wp">website</a></span><span>&nbsp;has
+            href="http://jmlr.org/tmlr">website</a></span><span>&nbsp;has
     </span><span class="c3"><a class="c2"
-            href="https://jmlr.org/tmlr/editorial-policies.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668257&amp;usg=AOvVaw3tnEReKMKlqVsHLYcnyS_g">submission
+            href="https://jmlr.org/tmlr/editorial-policies.html">submission
             guidelines</a></span><span>&nbsp;and </span><span class="c3"><a class="c2"
-            href="https://jmlr.org/tmlr/submissions.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668395&amp;usg=AOvVaw09dRfEAF3_6AbKXOFJO_uZ">updated
+            href="https://jmlr.org/tmlr/submissions.html">updated
             LaTeX templates</a></span><span>, the </span><span class="c3"><a class="c2"
-            href="http://openreview.net/group/edit?id%3DTMLR&amp;sa=D&amp;source=editors&amp;ust=1648047080668513&amp;usg=AOvVaw324pXgCAAd_JBWnaNa5iPC">OpenReview
+            href="http://openreview.net/group/edit?id%3DTMLR">OpenReview
             site</a></span><span>&nbsp;is tested and ready, and an expert slate of </span><span class="c3"><a class="c2"
-            href="https://jmlr.org/tmlr/editorial-board.html&amp;sa=D&amp;source=editors&amp;ust=1648047080668609&amp;usg=AOvVaw3Ppsr7p-KTQ75JRTFjPpvy">Action
+            href="https://jmlr.org/tmlr/editorial-board.html">Action
             Editors</a></span><span class="c1">&nbsp;and reviewers have been recruited. It&rsquo;s exciting to see TMLR
         becoming a reality, and we are grateful for all our supporters: the volunteers that have helped give feedback
         and debug the review process; all of you that have agreed to be AEs or reviewers; our advisors and sponsors; and
