--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -64,19 +64,19 @@ h2 {
         proceedings, so we suggest that you keep up to date on new submissions, new accepted papers, and new
         certifications by signing up for our </span><span>mailing list digest</span><span>&nbsp;(either </span><span
         class="c3"><a class="c2"
-            href="https://groups.google.com/g/tmlr-announce-daily&amp;sa=D&amp;source=editors&amp;ust=1648047080668959&amp;usg=AOvVaw3uRTpqi7UvmwANEtUjf-Pf">daily</a></span><span>&nbsp;or
+            href="https://groups.google.com/g/tmlr-announce-daily">daily</a></span><span>&nbsp;or
     </span><span class="c3"><a class="c2"
-            href="https://groups.google.com/g/tmlr-announce-weekly&amp;sa=D&amp;source=editors&amp;ust=1648047080669076&amp;usg=AOvVaw2GX6marcrGhXSiuyGsocLF">weekly</a></span><span>)
+            href="https://groups.google.com/g/tmlr-announce-weekly">weekly</a></span><span>)
         or following our </span><span>twitter feeds</span><span>&nbsp;for </span><span class="c3"><a class="c2"
-            href="https://twitter.com/TmlrSub&amp;sa=D&amp;source=editors&amp;ust=1648047080669221&amp;usg=AOvVaw2Xp5jRRkOyLbjoeMeISY7Y">new
+            href="https://twitter.com/TmlrSub">new
             submissions</a></span><span>, </span><span class="c3"><a class="c2"
-            href="https://twitter.com/TmlrPub&amp;sa=D&amp;source=editors&amp;ust=1648047080669301&amp;usg=AOvVaw1lPZqHo2W0PjfkUhSXtqwR">accepted
+            href="https://twitter.com/TmlrPub">accepted
             papers</a></span><span>&nbsp;and </span><span class="c3"><a class="c2"
-            href="https://twitter.com/TmlrCert&amp;sa=D&amp;source=editors&amp;ust=1648047080669376&amp;usg=AOvVaw0td-uCFz5CkEa01T9kTlNr">certified
+            href="https://twitter.com/TmlrCert">certified
             papers</a></span><span>. If you were not invited to be a reviewer, or were invited but couldn&rsquo;t accept
         because of other commitments, please keep an eye out for new submissions that are in your area of expertise -
         you are welcome to contribute and </span><span class="c3"><a class="c2"
-            href="https://jmlr.org/tmlr/contact.html%23solicit&amp;sa=D&amp;source=editors&amp;ust=1648047080669488&amp;usg=AOvVaw32D0QC2kavayc_lzi_j0cf">solicit
+            href="https://jmlr.org/tmlr/contact.html">solicit
             to review a submission</a></span><span class="c1">, subject to approval by the action editor.</span></p>
 <p class="c0 c4"><span class="c1"></span></p>
 <p class="c0"><span>Looking forward, we hope for a smooth and successful launch of the review process, but of course we
@@ -117,9 +117,9 @@ h2 {
 <p><span>Of course, there may be other rocky areas to navigate in the first few months! We apologize in
         advance for any issues that come up; do remember that this is a new effort, and be kind to us. Please check the
     </span><span class="c1"><a class="c3"
-            href="https://jmlr.org/tmlr/contact.html%23faq&amp;sa=D&amp;source=editors&amp;ust=1648048229718144&amp;usg=AOvVaw2EEr92LHGvuKDH3gcFDbJu">FAQ</a></span><span>&nbsp;regularly
+            href="https://jmlr.org/tmlr/contact.html#faq">FAQ</a></span><span>&nbsp;regularly
         whether you are an author, a reviewer, or an Action Editor, and </span><span class="c1"><a class="c3"
-            href="https://jmlr.org/tmlr/contact.html&amp;sa=D&amp;source=editors&amp;ust=1648048229718278&amp;usg=AOvVaw0sVCJnu2qEPzQRuOVZIjbI">contact
+            href="https://jmlr.org/tmlr/contact.html">contact
             us</a></span><span class="c0">&nbsp;if you encounter any issues or have feedback on the journal. </span></p>
 <p class="c2"><span class="c0"></span></p>
 <p><span class="c0">Raia Hadsell, with</span></p>
