absolute url for image

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@ ul li {
 
   <div id="fixed">
   <br>
-  <a align="right" href="index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="img/tmlr.jpg" border="0"></a> 
+  <a align="right" href="index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="/tmlr/img/tmlr.jpg" border="0"></a> 
   <p><br><br><br>
   <p align="right"> <a href="index.html"> Home </a> 
 
