absolute path for sidebar

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,27 +68,27 @@ ul li {
 
   <div id="fixed">
   <br>
-  <a align="right" href="index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="/tmlr/img/tmlr.jpg" border="0"></a> 
+  <a align="right" href="/tmlr/index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="/tmlr/img/tmlr.jpg" border="0"></a> 
   <p><br><br><br>
-  <p align="right"> <a href="index.html"> Home </a> 
+  <p align="right"> <a href="/tmlr/index.html"> Home </a> 
 
-  <p align="right"> <a href="submissions.html"> Submissions</a> 
+  <p align="right"> <a href="/tmlr/submissions.html"> Submissions</a> 
 
-  <p align="right"> <a href="editorial-policies.html"> Submission guidelines and editorial policies</a> 
+  <p align="right"> <a href="/tmlr/editorial-policies.html"> Submission guidelines and editorial policies</a> 
 
-  <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
+  <p align="right"> <a href="/tmlr/author-guide.html"> Author guidelines</a> 
 
-  <p align="right"> <a href="reviewer-guide.html"> Reviewer guidelines</a> 
+  <p align="right"> <a href="/tmlr/reviewer-guide.html"> Reviewer guidelines</a> 
 
-  <p align="right"> <a href="ae-guide.html"> Action Editor guidelines</a> 
+  <p align="right"> <a href="/tmlr/ae-guide.html"> Action Editor guidelines</a> 
 
-  <p align="right"> <a href="ethics.html"> Ethics guidelines</a> 
+  <p align="right"> <a href="/tmlr/ethics.html"> Ethics guidelines</a> 
 
-  <p align="right"> <a href="code.html"> Code of conduct</a> 
+  <p align="right"> <a href="/tmlr/code.html"> Code of conduct</a> 
 
-  <p align="right"> <a href="editorial-board.html"> Editorial board </a> 
+  <p align="right"> <a href="/tmlr/editorial-board.html"> Editorial board </a> 
 
-  <p align="right"> <a href="contact.html">Contact and FAQ </a></p>
+  <p align="right"> <a href="/tmlr/contact.html">Contact and FAQ </a></p>
 
   </div>
 
