--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@ div, iframe {
 
 
 <p>
-    Acting and founding Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google, Mila), <a href="http://www.raiahadsell.com/">Raia Hadsell</a> (DeepMind) and <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a> (New York University), along with Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
+    Acting and founding Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google, Mila), <a href="http://www.raiahadsell.com/">Raia Hadsell</a> (DeepMind) and <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a> (Genentech, New York University), along with Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
 </p>
 
 
