--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -51,7 +51,7 @@ h2 {
             guidelines</a></span><span>&nbsp;and </span><span class="c3"><a class="c2"
             href="https://jmlr.org/tmlr/submissions.html">updated
             LaTeX templates</a></span><span>, the </span><span class="c3"><a class="c2"
-            href="http://openreview.net/group/edit?id%3DTMLR">OpenReview
+            href="https://openreview.net/group?id=TMLR">OpenReview
             site</a></span><span>&nbsp;is tested and ready, and an expert slate of </span><span class="c3"><a class="c2"
             href="https://jmlr.org/tmlr/editorial-board.html">Action
             Editors</a></span><span class="c1">&nbsp;and reviewers have been recruited. It&rsquo;s exciting to see TMLR
