--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -68,6 +68,7 @@ h2 {
     </span><span class="c3"><a class="c2"
             href="https://groups.google.com/g/tmlr-announce-weekly">weekly</a></span><span>)
         or following our </span><span>twitter feeds</span><span>&nbsp;for </span><span class="c3"><a class="c2"
+            href="https://twitter.com/TmlrOrg">general announcements</a></span><span>, </span><span class="c3"><a class="c2"
             href="https://twitter.com/TmlrSub">new
             submissions</a></span><span>, </span><span class="c3"><a class="c2"
             href="https://twitter.com/TmlrPub">accepted
