--- a/templates/news/2022/launch.html
+++ b/templates/news/2022/launch.html
@@ -123,9 +123,7 @@ h2 {
             href="https://jmlr.org/tmlr/contact.html">contact
             us</a></span><span class="c0">&nbsp;if you encounter any issues or have feedback on the journal. </span></p>
 <p class="c2"><span class="c0"></span></p>
-<p><span class="c0">Raia Hadsell, with</span></p>
-<p><span class="c0">Kyunghyun Cho</span></p>
-<p><span class="c0">Hugo Larochelle</span></p>
+<p><span class="c0">Raia Hadsell, with<br>Kyunghyun Cho<br>Hugo Larochelle</span></p>
 <p class="c2"><span class="c0"></span></p>
 <p class="c2"><span class="c0"></span></p>
 
