we're accepting submissions

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,14 @@ div, iframe {
 <p>For more information on TMLR, see the following <a href="https://docs.google.com/presentation/d/1HFiMUS1rhFLmWGqJZS2obCbCKMiltZJEO2sq3w_KJGo/edit?usp=sharing">presentation</a> given at the NeurIPS 2021 Pre-Registration Workshop:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Uc1r1LfJtds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+
+
+<h2>News</h2>
+
+<ul>
+    <li><i>2022.03.24</i> <a href="https://jmlr.org/tmlr/news/2022/launch.html"></a></li>
+</ul>
+
 <h2>Editors-in-Chief</h2>
 
 
