--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,6 @@
 <h1>TMLR News</h1>
 
 <ul>
-    <li></li>
+    <li><i>2022.03.24</i> <a href="https://jmlr.org/tmlr/news/2022/launch.html"></a></li>
 </ul>
 {% endblock %}
