--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@ div, iframe {
 
 <ul>
     <li><i>2022.03.24</i> <a href="https://jmlr.org/tmlr/news/2022/launch.html"></a></li>
+    <li><a href="/tmlr/news/">More news ...</a></li>
 </ul>
 
 <h2>Editors-in-Chief</h2>
