--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@ div, iframe {
 <h2>News</h2>
 
 <ul>
-    <li><i>2022.03.24</i> <a href="https://jmlr.org/tmlr/news/2022/launch.html"></a></li>
+    <li><i>2022.03.24</i> <a href="https://jmlr.org/tmlr/news/2022/launch.html">TMLR is now accepting submissions</a></li>
     <li><a href="/tmlr/news/">More news ...</a></li>
 </ul>
 
