--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,7 +54,7 @@ We don't have such agreements with these conferences, but we'd like to down the 
     <p class="c3" id="solicit"><span class="italic">Q: Can I request to anonymously review a submission?
     </p>    
     <p class="c3"><span class="c0">A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Solicit Review". 
-        The AE in charge of the submission will receive a notification asking them to accept or denie your request.
+        The AE in charge of the submission will receive a notification asking them to accept or deny your request.
     </p>
     <p class="c3"><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be welcome?
     </p>    
